# Aerion-Watch-3D

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  deploy.sh  dev.sh  docker-compose.yml  implementation_plan.md  prd.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: _run.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: auth.py  commands.py  drones.py  health.py
backend/app/api/websocket/: __init__.py  endpoint.py
backend/app/core/: config.py  security.py
backend/app/models/: auth.py  command.py  drone.py
backend/app/services/: altitude_service.py  drone_registry.py  drone_simulator.py
docs/specs/: aerion_mind_architecture_report.md  aerion_mind_detailed_architecture_v1.0.md
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/scripts/: copy-cesium.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CesiumViewer.tsx  DroneList.tsx  GcsSideNav.tsx  GcsTopNav.tsx  LoginModal.tsx  MapLayerToggle.tsx  StatusBar.tsx  TelemetryPanel.tsx
frontend/src/hooks/: useWebSocket.ts
stitch_gcs_utm_design_requirements_prd/aerion_agentic_reasoning_center/: code.html
stitch_gcs_utm_design_requirements_prd/aerion_swarm_tactical_dashboard/: code.html
stitch_gcs_utm_design_requirements_prd/mission_planner_utm_analytics/: code.html
stitch_gcs_utm_design_requirements_prd/moreh_gcs_operations_dashboard/: code.html
stitch_gcs_utm_design_requirements_prd/obsidian_moreh/: DESIGN.md
(+8 files in other folders)
