[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[project]
name = "skywatch-rt-backend"
version = "0.1.0"
description = "SkyWatch-RT 드론 관제 FastAPI 백엔드"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.10",
    "pydantic-settings>=2.13.1",
    "pymavlink>=2.4.49",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
]

[project.scripts]
# uv run skywatch-backend 으로 서버 실행
skywatch-backend = "app._run:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
